[MONEY-3228] implement preliminary /rates API
implement live Rates service interpreter
fetch rates from OneRate API
add http4 client dependency
yield proper process status code on error
add configuration for OneRate API

--- a/forex-mtl/src/main/resources/application.conf
+++ b/forex-mtl/src/main/resources/application.conf
@@ -4,5 +4,8 @@ app {
     port = 8080
     timeout = 40 seconds
   }
+  one-frame {
+    base-url = "http://localhost:8081/rates"
+    token = ${ONE_FRAME_TOKEN}
+  }
 }
-
