[MONEY-3228] implement OneFrame Rates API caching
add scalacache & Caffeine dependency
add sbt-assembly plugin for fat JAR
add docker-compose manifest & Dockerfile & .dockerignore
use typed Uri parameter in app config
add unit tests
add Readme

--- a/forex-mtl/src/main/resources/application.conf
+++ b/forex-mtl/src/main/resources/application.conf
@@ -2,10 +2,16 @@ app {
   http {
     host = "0.0.0.0"
     port = 8080
-    timeout = 40 seconds
+    timeout = 10 seconds
   }
   one-frame {
-    base-url = "http://localhost:8081/rates"
-    token = ${ONE_FRAME_TOKEN}
+    api {
+        base-url = "http://localhost:8081"
+        base-url = ${?ONE_FRAME_BASE_URL}
+        token = ${ONE_FRAME_TOKEN}
+    }
+    cache {
+      refresh-period = 5 minutes
+    }
   }
 }
