[MONEY-3228] improve error handling
handle currency parsing errors
remove vestigial LookupFailure error from RatesProgram
differentiate between OneFrame API errors and other errors
delay cache update retries
update Readme

--- a/forex-mtl/src/main/resources/application.conf
+++ b/forex-mtl/src/main/resources/application.conf
@@ -11,7 +11,9 @@ app {
         token = ${ONE_FRAME_TOKEN}
     }
     cache {
-      refresh-period = 5 minutes
+      refresh-period = 290 seconds // 4 minutes 50 seconds
+      retry-period = 5 seconds
+      ttl = 5 minutes
     }
   }
 }
